refactor(exception): replace service runtime exceptions with custom exceptions