@@ -7,6 +7,8 @@ import org.travel_stories.dto.DayRequestDto;
 import org.travel_stories.dto.DayResponseDto;
 import org.travel_stories.entity.Day;
 import org.travel_stories.entity.Itinerary;
+import org.travel_stories.exception.InvalidOperationException;
+import org.travel_stories.exception.ResourceNotFoundException;
 import org.travel_stories.repository.DayRepository;
 import org.travel_stories.repository.ItineraryRepository;
 
@@ -31,61 +33,77 @@ public class DayService {
         return dayResponseDto;
     }
 
-    public DayResponseDto addDay(UUID itineraryId, DayRequestDto dayRequestDto){
+    @Transactional
+    public DayResponseDto addDay(UUID itineraryId, DayRequestDto dayRequestDto) {
+
         Itinerary itinerary = itineraryRepository.findById(itineraryId)
-                .orElseThrow(() -> new RuntimeException("Itinerary not found."));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Itinerary not found."));
 
         int nextDayNumber = dayRepository.findMaxDayNumber(itineraryId) + 1;
 
         if (nextDayNumber > itinerary.getTotalDays()) {
-            throw new RuntimeException("Cannot exceed total days.");
+            throw new InvalidOperationException(
+                    "Cannot add more days than the itinerary total."
+            );
         }
 
         Day day = new Day();
         day.setDayNumber(nextDayNumber);
         day.setDescription(dayRequestDto.getDescription());
         day.setItinerary(itinerary);
+
         dayRepository.save(day);
 
         return map(day);
     }
 
-    public void removeDay(UUID itineraryId, UUID dayId){
+    @Transactional
+    public void removeDay(UUID itineraryId, UUID dayId) {
+
         Day day = dayRepository.findById(dayId)
-                .orElseThrow(() -> new RuntimeException("Day not found."));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Day not found."));
 
         itineraryRepository.findById(itineraryId)
-                .orElseThrow(() -> new RuntimeException("Itinerary not found."));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Itinerary not found."));
 
-        int deleteDayNumber = day.getDayNumber();
+        int deletedDayNumber = day.getDayNumber();
 
         dayRepository.delete(day);
         dayRepository.flush();
 
-        List<Day> daysToAdjust = dayRepository.findByItineraryItineraryIdOrderByDayNumber(itineraryId);
+        List<Day> daysToAdjust =
+                dayRepository.findByItineraryItineraryIdOrderByDayNumber(itineraryId);
 
-        for (Day d : daysToAdjust){
-            if (d.getDayNumber() > deleteDayNumber){
-                d.setDayNumber(d.getDayNumber()-1);
+        for (Day d : daysToAdjust) {
+            if (d.getDayNumber() > deletedDayNumber) {
+                d.setDayNumber(d.getDayNumber() - 1);
             }
         }
 
         dayRepository.saveAll(daysToAdjust);
     }
 
-    public List<DayResponseDto> getDaysByItinerary(UUID itineraryId){
-        List<DayResponseDto> days = dayRepository.findByItineraryItineraryIdOrderByDayNumber(itineraryId)
+    public List<DayResponseDto> getDaysByItinerary(UUID itineraryId) {
+
+        return dayRepository.findByItineraryItineraryIdOrderByDayNumber(itineraryId)
                 .stream()
                 .map(this::map)
-                .collect(Collectors.toList());
-        return days;
+                .toList();
     }
 
-    public void updateDay(UUID dayId, DayRequestDto dayRequestDto){
+    @Transactional
+    public void updateDay(UUID dayId, DayRequestDto dayRequestDto) {
+
         Day day = dayRepository.findById(dayId)
-                .orElseThrow(() -> new RuntimeException("Day not found."));
-        if (dayRequestDto.getDescription() != null)
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Day not found."));
+
+        if (dayRequestDto.getDescription() != null) {
             day.setDescription(dayRequestDto.getDescription());
+        }
     }
 
 }
